<resources>
    <string name="app_name">Morphing</string>

    <string name="action_settings">Settings</string>
    <string name="action_undo">Undo</string>
    <string name="action_new">New</string>
    <string name="action_save">Save</string>
    <string name="action_load">Load</string>
    <string name="action_open">Open</string>
    <string name="action_takePicture">Take Picture</string>
    <string name="action_selectImages">Select Images</string>
    <string name="action_import">Import Images</string>
    <string name="action_tools">Tools</string>
    <string name="action_draw">Draw</string>
    <string name="action_morph">Morph Images</string>
    <string name="action_clearLines">Clear Lines</string>
    <string name="action_remove_line">Remove Line At</string>
    <string name="action_editLines">Edit Mode</string>
    <string name="action_help">Help</string>

    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_done">Done</string>
    <string name="dialog_first">First image</string>
    <string name="dialog_second">Second image</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="extra_frames">extra_frames</string>
    <string name="extra_image">extra_image</string>

    <string name="image_nav_description">This is my navigation image</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_session">Current Session</string>
    <string name="menu_drawing">Drawing</string>
    <string name="menu_morphing">Morphing Images</string>

    <string name="text_frames">Frames: </string>
    <string name="title_activity_morph_display">MorphDisplayActivity</string>
    <string name="title_activity_picture">Picture</string>
    <string name="title_enter_frames">Enter number of frames</string>

    <string name="right_image_save">rightImage.png</string>
    <string name="left_image_save">leftImage.png</string>
</resources>
